fix(SocialLinks): fixes email button style on Safari

--- a/components/sections/Header/SocialLinks/SocialLinks.module.css
+++ b/components/sections/Header/SocialLinks/SocialLinks.module.css
@@ -5,6 +5,9 @@
   background: none;
   border: none;
 
+  margin: 0;
+  padding: 0;
+
   height: fit-content;
 
   font-size: 1.75rem;
